--- a/BUILD.gn
+++ b/BUILD.gn
@@ -35,7 +35,7 @@ config("skia_public") {
   if (is_component_build) {
     defines += [ "SKIA_DLL" ]
   }
-  if (is_fuchsia || is_linux) {
+  if (is_fuchsia || is_linux || is_ohos) {
     defines += [ "SK_R32_SHIFT=16" ]
   }
   if (skia_enable_optimize_size) {
@@ -575,7 +575,7 @@ if (skia_compile_modules) {
       sources += [ "src/utils/SkGetExecutablePath_win.cpp" ]
     } else if (is_mac || is_ios) {
       sources += [ "src/utils/SkGetExecutablePath_mac.cpp" ]
-    } else if (is_linux || is_android) {
+    } else if (is_linux || is_android || is_ohos) {
       sources += [ "src/utils/SkGetExecutablePath_linux.cpp" ]
     }
     if (is_win) {
@@ -702,7 +702,7 @@ if (skia_compile_sksl_tests) {
       sources += [ "src/utils/SkGetExecutablePath_win.cpp" ]
     } else if (is_mac || is_ios) {
       sources += [ "src/utils/SkGetExecutablePath_mac.cpp" ]
-    } else if (is_linux || is_android) {
+    } else if (is_linux || is_android || is_ohos) {
       sources += [ "src/utils/SkGetExecutablePath_linux.cpp" ]
     }
     if (is_win) {
@@ -1585,7 +1585,7 @@ skia_component("skia") {
     ]
   }
 
-  if (is_linux || is_wasm) {
+  if (is_linux || is_wasm || is_ohos) {
     sources += [ "src/ports/SkDebug_stdio.cpp" ]
     if (skia_use_egl) {
       libs += [ "GLESv2" ]
@@ -1790,7 +1790,7 @@ if (skia_enable_tools) {
     outputs = [ skia_h ]
   }
 
-  if (is_linux && target_cpu == "x64") {
+  if ((is_linux || is_ohos) && target_cpu == "x64") {
     skia_executable("fiddle") {
       check_includes = false
       libs = []
@@ -2385,7 +2385,7 @@ if (skia_enable_tools) {
     ]
   }
 
-  if (is_linux || is_mac || skia_enable_optimize_size) {
+  if (is_linux || is_mac || skia_enable_optimize_size || is_ohos) {
     if (skia_enable_skottie) {
       test_app("skottie_tool") {
         deps = [ "modules/skottie:tool" ]
@@ -2555,7 +2555,7 @@ if (skia_enable_tools) {
     ]
   }
 
-  if (is_linux && skia_use_icu) {
+  if ((is_linux || is_ohos) && skia_use_icu) {
     test_app("sktexttopdf") {
       sources = [ "tools/using_skia_and_harfbuzz.cpp" ]
       deps = [
@@ -2565,7 +2565,7 @@ if (skia_enable_tools) {
     }
   }
 
-  if (is_linux || is_mac) {
+  if (is_linux || is_mac || is_ohos) {
     test_app("create_test_font") {
       sources = [ "tools/fonts/create_test_font.cpp" ]
       deps = [ ":skia" ]
@@ -2898,7 +2898,7 @@ if (skia_enable_tools) {
     }
   }
 
-  if (!skia_use_vulkan && (is_mac || is_linux || is_win)) {
+  if (!skia_use_vulkan && (is_mac || is_linux || is_win || is_ohos)) {
     test_app("fiddle_examples") {
       sources = [
         "tools/fiddle/all_examples.cpp",
@@ -3083,7 +3083,7 @@ if (skia_enable_tools) {
     }
   }
 
-  if (is_linux || is_win || is_mac) {
+  if (is_linux || is_win || is_mac || is_ohos) {
     test_app("editor") {
       is_shared_library = is_android
       deps = [ "modules/skplaintexteditor:editor_app" ]
